# vyu

./: .gitignore  CMakeLists.txt  README.md  resources.qrc  vyu_en_US.ts  vyu_ru_RU.ts
src/: main.cpp
src/vyu/: mainwindow.cpp  mainwindow.h  mainwindow.ui
